# line-dl

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
examples/: get-ema.py  get-nene.py  get-pikachu.py
line_dl/: __init__.py  main.py
scripts/: README.md  apng2gif.js  convert-anime.sh  convert-sound.sh  convert-soundanime.sh
src/: __main__.py
tests/: test_line_dl.py
